tests/compile_fail/handle_scope_lifetime_1.stderr
error[E0499]: cannot borrow `*hs1` as mutable more than once at a time
  --> $DIR/handle_scope_lifetime_1.rs:12:44
   |
9  |   let mut hs2 = v8::EscapableHandleScope::new(hs1);
   |                                               --- first mutable borrow occurs here
...
12 |   let _hs3 = v8::EscapableHandleScope::new(hs1);
   |                                            ^^^ second mutable borrow occurs here
13 |   let _local = v8::Integer::new(hs2, 123);
   |                                 --- first borrow later used here
